I ammeneded the original practice exercise by changing h1 to favourite artist, adding a p tag

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Git practice</h1>
+    <h1>Kelela</h1>
+    <p>Kelela Hive Standup</p>
+    <img src="../Documents/Photos/Inspo/kelela.png" alt="A screenshotted photo of Kelela & her makeup">
 </body>
 </html>
